# hid-proxy

./: Cargo.toml  Dockerfile.cross  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
examples/: cs2_ak47_norecoil.rhai  default.rhai  diep_io.rhai  hole_io.rhai  joystick_to_mouse.rhai  keylogger.rhai  measure_presstime.rhai  monitor.rhai  reverse_mouse.rhai  smooth_mouse.rhai  space_to_click.rhai  swap_keys.rhai
scripts/: cs2_ak47_norecoil.rhai  extra_a.rhai  keylogger.rhai  measure_presstime.rhai  monitor.rhai  smooth_mouse.rhai
src/: bindings.rs  cli.rs  device.rs  gadget.rs  logging.rs  main.rs  proxy.rs  scripting.rs  setup.rs  virtual_device.rs
